# xmas-lights

./: .gitignore  README.md  akaso_calib  calibrate.py  intrinsic_mono_calibration.ipynb  measure_bulbs.m  model_toy.py  model_tree.ipynb  nokia_intrinsics_pinhole.p  ocams_cameracontrol  plot_tree.m  print_coordinates.m  pyproject.toml  requirements.txt  segment_lights.ipynb  segment_lights.py  xmas_lights.code-workspace  xmas_lights.py
Arduino/calibrate_xmas_tree/: calibrate_xmas_tree.ino
Arduino/calibrate_xmas_tree_colorCode/: calibrate_xmas_tree_colorCode.ino
Arduino/pulsing/: pulsing.ino
Arduino/test_blink/: test_blink.ino
Arduino/xmas_light/: coordinates.h  xmas_light.ino
Arduino/xmas_light_alexa/: coordinates.h  xmas_light_alexa.ino
calibrate_camera/: calibrate.py  camera_cal.p  detections1.csv  detections2.csv  detections3.csv  detections4.csv  nokia_intrinsics_fisheye.p
generate_blink_pattern/: animate_pattern.m  hsv_soft.m
model_tree/: CMakeLists.txt  map_bulbs.m  model_toy.ipynb  model_toy.py  mymisc.py  outputfile.txt  outputfile2023.txt  print_coordinates.m  segment_lights.py
notebooks/: audio_scrap.ipynb  bundle_adjust_tree.ipynb  tests.ipynb
src/calibrate_camera/: camera_cal2.p  detect_bulbs.py  detections1.csv  detections2.csv  detections3.csv  detections4.csv  ocam_stereo_config
src/model_tree/: mymisc.py  outputfile.txt  samsung_intrinsics_fisheye.p  segment_lights_BackSub.ipynb  segment_lights_Color.ipynb  xmas_lights.py
src/xmas_lights.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
xmas_light/: bulb_coordinates.ino  xmas_light.ino
(+3 files in other folders)
