[project]
name = "xmas-lights"
version = "0.1.0"
description = "Bundle adjustment for Christmas tree light bulbs"
authors = [{ name = "Guilherme Aramizo Ribeiro" }]
dependencies = [
    "numpy",
    "scipy",
    "opencv-python",
    "matplotlib",
    "torch",
    "torchvision",
    "ipykernel",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
